# jupyterlab_plugin_trial

./: README.md
backend-server/: .env  package-lock.json  package.json  schema.js  server.js
myextension/: .pnp.cjs  Dockerfile  LICENSE  jupyterhub.sqlite  jupyterhub_cookie_secret  package-lock.json  package.json  pyproject.toml  steps.txt
myextension/binder/: environment.yml
myextension/lib/: config.js  helper.js  index.js  testing.ipynb  users.js
myextension/style/: base.css
trial_plugins/: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.cfg  setup.py  webpack.config.js
trial_plugins/src/plugins/example/: index.ts
trial_plugins/src/plugins/paths/: index.ts
trial_plugins/src/plugins/top/: index.tsx  tokens.ts
trial_plugins/trial_plugins/: __init__.py
trial_plugins/trial_plugins/tests/: conftest.py
trial_plugins/ui-tests/: package.json
